--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
 	"name": "@excilone/aderis",
 	"description": "Adds new methods and properties to the Eris library",
-	"version": "0.0.3",
+	"version": "0.0.5",
 	"main": "dist/index.js",
 	"types": "./index.d.ts",
 	"files": [
 		"dist/**/*",
 		"index.d.ts"
 	],
+	"exports": {
+		".": {
+			"require": "./dist/index.js",
+			"types": "./index.d.ts"
+		},
+		"./config": {
+			"require": "./dist/config.js",
+			"types": "./dist/config.d.ts"
+		},
+		"./config.js": {
+			"require": "./dist/config.js",
+			"types": "./dist/config.d.ts"
+		}
+	},
 	"license": "Apache-2.0",
 	"dependencies": {
+		"@excilone/collection": "^0.0.2",
 		"eris": "^0.16.1"
 	},
 	"devDependencies": {
