--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@excilone/aderis",
 	"description": "Adds new methods and properties to the Eris library",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"main": "dist/index.js",
 	"types": "./index.d.ts",
 	"files": [
@@ -11,6 +11,7 @@
 	"exports": {
 		".": {
 			"require": "./dist/index.js",
+			"import": "./dist/config.js",
 			"types": "./index.d.ts"
 		},
 		"./config": {
