--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 	"files": [
 		"dist/**/*",
 		"*.d.ts",
-		"esm.mjs"
+		"esm.js"
 	],
 	"exports": {
 		".": {
 			"require": "./dist/index.js",
-			"import": "./esm.mjs",
+			"import": "./esm.js",
 			"types": "./index.d.ts"
 		}
 	},
